Changes in version 1.2.4
------------------------

* Converted AES key implementation to implement javax.crypto.SecretKey so that
  AESCounterRNG works on Android.

* AESCounterRNG now accepts 320-bit and 384-bit seeds.

* Fixed serialisation of AESCounterRNG.

Changes in version 1.2.3
------------------------

* Fixed bug in convertBytesToLong method in the BinaryUtils class.

* Added OSGi bundle metadata (contributed by Dave LeBlanc).

* Updated documentation to explain why setSeed does nothing for any of the
  RNGs.


Changes in version 1.2.2
------------------------

* Fixed serialisation of MersenneTwisterRNG and CellularAutomatonRNG.

* Made XORShiftRNG and CMWC4096RNG thread-safe.

* Added source JAR to distribution.


Changes in version 1.2.1
------------------------

* Converted internal state of XORShiftRNG from an array to five separate
  fields.  This results in improved performance.  Optimisation suggested by Jos
  Hirth.

* Optimised the Probability class so that it doesn't make an RNG call when the
  probability is 1.

* Added swapSubstring method to enable efficient exchange of data between two
  BitStrings.


Changes in verison 1.2
----------------------

* Added two new fast PRNGs (CMWC and XOR).  CMWC provides a very long period
  and the XOR RNG is twice as fast as the Mersenne Twister.  See
  http://school.anhb.uwa.edu.au/personalpages/kwessen/shared/Marsaglia03.html
  for descriptions.

* Fixed RandomDotOrgSeedGenerator so that it can generate seeds > 1kb in size.

* Changed RandomDotOrgSeedGenerator so that it uses HTTPS for communicating
  with the website (ISSUE#9).

* Introduced the Probability class, a new numeric type.  This immutatble value
  type encapsulates a probability value between zero and one.  The class
  enforces the 0..1 bounds and provides convenient methods for working with
  probabilities.

* Added Rational type to enable arithmetic on rational numbers without loss of
  precision.
